--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,3 +107,22 @@ body {
     background: rgba(255, 255, 255, 0.3);
   }
 }
+
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+.transform {
+  transform-style: preserve-3d;
+}
+
+@layer utilities {
+  .hover-shadow {
+    @apply transition-shadow duration-300;
+  }
+
+  .hover-shadow:hover {
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1),
+      0 0 20px rgba(255, 255, 255, 0.05), 0 0 30px rgba(255, 255, 255, 0.025);
+  }
+}
