--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,3 +126,35 @@ body {
       0 0 20px rgba(255, 255, 255, 0.05), 0 0 30px rgba(255, 255, 255, 0.025);
   }
 }
+
+.gradient-mask {
+  mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    rgba(0, 0, 0, 0.2) 15%,
+    rgba(0, 0, 0, 0.8) 30%,
+    black 50%,
+    rgba(0, 0, 0, 0.8) 70%,
+    rgba(0, 0, 0, 0.2) 85%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    rgba(0, 0, 0, 0.2) 15%,
+    rgba(0, 0, 0, 0.8) 30%,
+    black 50%,
+    rgba(0, 0, 0, 0.8) 70%,
+    rgba(0, 0, 0, 0.2) 85%,
+    transparent
+  );
+}
+
+.transition-gradient {
+  background: linear-gradient(
+    180deg,
+    rgba(235, 87, 87, 0.8) 0%,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
